--- a/desafiogit.html
+++ b/desafiogit.html
@@ -9,5 +9,7 @@
     <h1>Desafio Git</h1>
     <p>inicio</p>
     <p>teste novo branch</p>
+    <p>validação do merge</p>
+    <p>fim</p>
 </body>
 </html>
